# hermetic-ai-mcp

./: .gitignore  README.md  launch_server.py  one_command_install.sh  pyproject.toml  requirements.txt  setup.py
docs/: API_SPECIFICATIONS.md  ARCHITECTURE_BLUEPRINT.md  ROADMAP.md  STATUS_REPORT.md
hermetic_ai_mcp/: api_server.py  server.py
hermetic_ai_mcp/core/: lsp_integration.py  lsp_protocol.py  memory_system.py  module_loader.py  platform.py  sequential_thinking.py  verification_engine.py
