[project]
name = "hermetic-ai-mcp"
version = "1.0.0"
description = "Hermetic AI Platform - MCP Server for Claude"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RAMZ" }]
keywords = ["mcp", "llm", "ai", "claude", "verification", "memory"]
license = { text = "Proprietary" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.0.0",
    "asyncio>=3.4.3",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
hermetic-mcp = "hermetic_ai_mcp.server:main"
hermetic-api = "hermetic_ai_mcp.api_server:main"

[project.urls]
Homepage = "https://github.com/ramz/hermetic-ai-mcp"
Repository = "https://github.com/ramz/hermetic-ai-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermetic_ai_mcp"]

[tool.uv]
required-version = ">=0.5.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pyright]
typeCheckingMode = "standard"
include = ["hermetic_ai_mcp"]